plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// UUID 기본키 값 주입을 위한 ULID 의존성
	implementation 'com.github.f4b6a3:ulid-creator:5.2.3'
	// swagger 의존성
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	// mysql 드라이버
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'com.mysql:mysql-connector-j'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testRuntimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	//WebRTC 클라이언트 의존성 추가
	implementation('org.webjars.bower:webrtc-adapter:7.4.0')
	//Kurento (미디어서버) 관련 의존성 추가
	implementation('org.kurento:kurento-client:6.16.0')
	implementation('org.kurento:kurento-utils-js:6.15.0')

	//Redis 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// ulid-creator
	implementation group: 'com.github.f4b6a3', name: 'ulid-creator', version: '5.1.0'

	// security, jwt
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	
	// test db 의존성 추가	
	testImplementation 'com.h2database:h2'

	// rabbitmq
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'

	// JSON to String[]
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'

	// dotenv
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
}

tasks.named('bootRun') {
	doFirst {
		jvmArgs = [
				'--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED'
		]
	}
//	useJUnitPlatform()
}
test {
	useJUnitPlatform()
	jvmArgs = [
			'--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED'
	]
}